# zbxtg

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.optimized  FIXES.md  Makefile  README-Docker.md  README-Windows.md  README.md  RELEASE.md  alert_monitor.py  config.py  database.py  docker-compose.yml  docker-run.bat  docker-run.ps1  docker-run.sh  filters.py  install.sh  install_certs.sh  main.py  metrics.py  pyproject.toml  pytest.ini  quick-start.sh  requirements-dev.txt  requirements.txt  run_example.sh  structured_logger.py  telegram_bot.py  update.bat  update.ps1  update.sh  zabbix_client.py
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
k8s/: README.md  configmap.yaml  deployment.yaml  secret.yaml.example
ssl-certs/: .gitkeep
tests/: __init__.py  conftest.py  test_alert_monitor.py  test_config.py  test_database.py  test_filters.py  test_main.py  test_metrics.py  test_structured_logger.py  test_telegram_bot.py  test_zabbix_client.py
